# smartmeter-netz-noe

./: .env.tmpl  .envrc  .gitignore  import_sqlite.py  pyproject.toml  requirements.txt  settings.py  smartmeter.py
requirements/: requirements.in  requirements.txt
src/: import_sqlite.py  smartmeter.py
