[project]
name = "smartmeter-netz-noe"
version = "0.1.0"
description = "Download meter data from smartmeter.netz-noe.at"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
src = ["src"]